--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -3,27 +3,29 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp"
-    android:layout_marginBottom="10dp">
+    android:padding="8dp">
 
-    <!-- Имя пользователя -->
     <TextView
         android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Имя пользователя"
-        android:textColor="@color/black"
         android:textStyle="bold"
-        android:textSize="16sp" />
+        android:textColor="@color/black"/>
 
-    <!-- Сообщение -->
     <TextView
         android:id="@+id/message_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Текст сообщения"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:layout_marginTop="4dp" />
+        android:textSize="16sp"
+        android:textColor="@color/black"/>
 
+    <TextView
+        android:id="@+id/message_timestamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00:00"
+        android:textSize="12sp"
+        android:textColor="@color/gray"/>
 </LinearLayout>
