--- a/app/src/main/res/layout/item_transfer.xml
+++ b/app/src/main/res/layout/item_transfer.xml
@@ -1,26 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:layout_margin="8dp"
+    android:elevation="4dp">
 
-    <TextView
-        android:id="@+id/text_player_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text="Игрок" />
+        android:orientation="vertical"
+        android:padding="12dp">
 
-    <TextView
-        android:id="@+id/text_from_team"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Из команды" />
+        <TextView
+            android:id="@+id/player_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Player Name"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/text_to_team"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="В команду" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/from_team"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="From Team"
+            android:textSize="14sp"
+            android:textColor="#555555"/>
+
+        <TextView
+            android:id="@+id/to_team"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="To Team"
+            android:textSize="14sp"
+            android:textColor="#555555"/>
+
+        <TextView
+            android:id="@+id/transfer_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Transfer Date"
+            android:textSize="12sp"
+            android:textColor="#888888"/>
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
