--- a/app/src/main/res/drawable/ic_scorers.xml
+++ b/app/src/main/res/drawable/ic_scorers.xml
@@ -1,12 +1,36 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="#FF0000"
-        android:pathData="M12,2C6.48,2,2,6.48,2,12s4.48,10,10,10s10-4.48,10-10S17.52,2,12,2z M12,4c4.41,0,8,3.59,8,8s-3.59,8-8,8s-8-3.59-8-8S7.59,4,12,4z M12,6c-3.31,0-6,2.69-6,6s2.69,6,6,6s6-2.69,6-6S15.31,6,12,6z" />
+    android:width="200dp"
+    android:height="200dp"
+    android:viewportWidth="200"
+    android:viewportHeight="200">
+
+    <!-- Белая часть мяча -->
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M11,16h2v-2h-2zm0-4h2v-2h-2z"/>
+        android:pathData="M100,10
+                         C50.7,10,10,50.7,10,100
+                         S50.7,190,100,190
+                         S190,139.3,190,100
+                         S139.3,10,100,10z" />
+
+    <!-- Черные шестиугольники -->
+    <path
+        android:fillColor="#000000"
+        android:pathData="M100,40
+                         L130,70
+                         L100,100
+                         L70,70
+                         Z
+
+                         M100,60
+                         L130,90
+                         L100,120
+                         L70,90
+                         Z
+
+                         M100,80
+                         L130,110
+                         L100,140
+                         L70,110
+                         Z" />
 </vector>
