--- a/app/src/main/res/anim/slide_in.xml
+++ b/app/src/main/res/anim/slide_in.xml
@@ -4,3 +4,7 @@
     android:fromYDelta="100%"
     android:toYDelta="0%"
     android:duration="300" />
+    <?xml version="1.0" encoding="utf-8"?>
+    <!--
+      Animation for user points card (slides in from top).
+    -->
