--- a/app/src/main/res/drawable/ic_squad.xml
+++ b/app/src/main/res/drawable/ic_squad.xml
@@ -1,9 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+
+    <!-- Outer circular border (similar to provided example) -->
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M12,12c2.21,0,4-1.79,4-4s-1.79-4-4-4S8,5.79,8,8S9.79,12,12,12z M4,20v-2c0-2.21,3.58-4,8-4s8,1.79,8,4v2H4z" />
+        android:pathData="M12,2C6.48,2,2,6.48,2,12s4.48,10,10,10s10-4.48,10-10S17.52,2,12,2z M12,3c4.97,0,9,4.03,9,9s-4.03,9-9,9s-9-4.03-9-9S7.03,3,12,3z" />
+
+    <!-- Squad: Three figures (head + body) in triangular formation -->
+    <!-- Figure 1 (top center) -->
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M12,6.5c0.55,0,1,0.45,1,1s-0.45,1-1,1s-1-0.45-1-1S11.45,6.5,12,6.5z M11.5,8.5h1v3h-1z" />
+
+    <!-- Figure 2 (bottom left) -->
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M9,11.5c0.55,0,1,0.45,1,1s-0.45,1-1,1s-1-0.45-1-1S8.45,11.5,9,11.5z M8.5,13.5h1v3h-1z" />
+
+    <!-- Figure 3 (bottom right) -->
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M15,11.5c0.55,0,1,0.45,1,1s-0.45,1-1,1s-1-0.45-1-1S14.45,11.5,15,11.5z M14.5,13.5h1v3h-1z" />
 </vector>
