--- a/app/src/main/res/layout/item_pred_player.xml
+++ b/app/src/main/res/layout/item_pred_player.xml
@@ -6,17 +6,41 @@
     android:padding="8dp"
     android:gravity="center_vertical">
 
+    <ImageView
+        android:id="@+id/player_image"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:contentDescription="Player Image"
+        android:src="@drawable/ic_default_player_image"
+        android:scaleType="centerCrop" />
+
     <CheckBox
         android:id="@+id/player_checkbox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp" />
 
-    <TextView
-        android:id="@+id/player_name"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Player Name"
-        android:textSize="16sp"
-        android:textColor="@color/primary_text" />
+        android:orientation="vertical"
+        android:layout_marginStart="8dp">
+
+        <TextView
+            android:id="@+id/player_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Player Name"
+            android:textSize="16sp"
+            android:textColor="@color/primary_text" />
+
+        <TextView
+            android:id="@+id/player_position"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Position"
+            android:textSize="12sp"
+            android:textColor="@color/secondary_text" />
+    </LinearLayout>
 </LinearLayout>
